# roka

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: pages.yml
crates/qr/: BUDGETS.md  CHANGELOG.md  Cargo.toml  README.md
crates/qr/benches/: codec.rs
crates/qr/examples/: encode.rs  scan.rs
crates/qr/src/: bch.rs  decode.rs  deflate.rs  deflate_encode.rs  encode.rs  galois.rs  lib.rs  mask.rs  matrix.rs  pbm.rs  png.rs  reed_solomon.rs  render.rs  sampler.rs  tables.rs
crates/qr/tests/: perf_gate.rs  round_trip.rs
crates/totp/: BUDGETS.md  CHANGELOG.md  Cargo.toml  README.md
crates/totp/benches/: otp.rs
crates/totp/examples/: now.rs
crates/totp/src/: base32.rs  hmac.rs  hotp.rs  lib.rs  otpauth.rs  sha1.rs  totp.rs
crates/totp/tests/: perf_gate.rs  round_trip.rs
crates/vault/: BUDGETS.md  Cargo.toml  README.md
crates/vault/benches/: crypto.rs
crates/vault/src/: account.rs  aead.rs  chacha20.rs  hmac.rs  lib.rs  pbkdf2.rs  poly1305.rs  sha256.rs  vault.rs
crates/vault/tests/: perf_gate.rs
crates/wasm/: Cargo.toml
crates/wasm/src/: lib.rs
roka-qr/: Cargo.toml
roka-qr/src/: lib.rs
roka-totp/: Cargo.toml
web/: app.js  build.sh  index.html  manifest.json  service-worker.js  style.css
web/pkg/: .gitignore  package.json  roka_wasm.d.ts  roka_wasm.js  roka_wasm_bg.wasm  roka_wasm_bg.wasm.d.ts
