[workspace]
resolver = "2"
members = ["roka-qr", "roka-totp"]

[workspace.package]
version = "0.0.1"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/goliajp/roka"
homepage = "https://github.com/goliajp/roka"
authors = ["GOLIA Inc. <oss@golia.jp>"]
rust-version = "1.70"
