[package]
name = "roka-qr"
description = "Zero-dependency QR code encoder + decoder with built-in PNG/PBM I/O. (placeholder release — see 0.1.0)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
rust-version.workspace = true
readme = "README.md"
keywords = ["qrcode", "qr", "png", "decoder", "encoder"]
categories = ["encoding", "multimedia::images"]
