[package]
name = "roka-qr"
version = "0.1.1"
edition = "2024"
rust-version = "1.85"
description = "Zero-dependency QR code encoder + decoder with built-in PNG/PBM I/O — pure Rust, no unsafe."
license = "Apache-2.0 OR MIT"
repository = "https://github.com/goliajp/roka"
homepage = "https://github.com/goliajp/roka"
documentation = "https://docs.rs/roka-qr"
authors = ["GOLIA K.K."]
keywords = ["qrcode", "qr", "png", "decoder", "encoder"]
categories = ["encoding", "multimedia::images"]
readme = "README.md"

[lints]
workspace = true

[dev-dependencies]
criterion = { version = "0.8", default-features = false, features = ["cargo_bench_support"] }

[[bench]]
name = "codec"
harness = false
