[package]
name = "roka-vault"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "Zero-dependency encrypted vault for TOTP secrets — self-implemented SHA-256, ChaCha20-Poly1305, PBKDF2."
license = "Apache-2.0 OR MIT"
repository = "https://github.com/goliajp/roka"
homepage = "https://github.com/goliajp/roka"
documentation = "https://docs.rs/roka-vault"
authors = ["GOLIA K.K."]
keywords = ["vault", "totp", "encryption", "chacha20", "pbkdf2"]
categories = ["authentication", "cryptography"]
readme = "README.md"

[lints]
workspace = true

[dev-dependencies]
criterion = { version = "0.8", default-features = false, features = ["cargo_bench_support"] }

[[bench]]
name = "crypto"
harness = false
